Bug 1415697 - Move a using-declaration in Assembler-shared.h to global scope. r=bbouvier

This works around a clang compiler error on clang that is likely caused
by a clang bug.

MozReview-Commit-ID: 5fnQG2r3gYL